--- a/css/pricing_style.css
+++ b/css/pricing_style.css
@@ -162,7 +162,7 @@ section .table-controlbar .searchbar img {
 }
 section .table-controlbar .searchbar input {
 	width: 100%;
-	padding: 0 0 0 19px;
+	padding: 0 55px 0 19px;
 	line-height: 55px;
 	background: #F8F8F8;
 	border: 1px solid #E8E8E8;
@@ -406,7 +406,25 @@ section .require-form .submitbutton button:hover {
 	}
 	section .buynowbuttonbar,
 	section .table-main {
-		margin-bottom: 80px;
+		margin-bottom: 50px;
+	}
+	section .pricing-option {
+		padding-top: 90px;
+		margin-bottom: 70px;
+	}
+	section .pricing-option h1 {
+		margin-bottom: 60px;
+	}
+	section .table-main .container {
+		padding-bottom: 20px;
+	}
+	section .table-main table,
+	section .require-form h1,
+	section .require-form h5 {
+		margin-bottom: 40px;
+	}
+	section .require-form {
+		margin-bottom: 60px;
 	}
 }
 @media (max-width:1200px) {
